--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,17 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["*"],
+      "@/public/*": ["public/*"],
+      "@/components/*": ["components/*"],
+      "@/components": ["components"],
+      "@/store/*": ["store/*"],
+      "@/store": ["store"],
+      "@/pages/*": ["pages/*"],
+      "@/lib/*": ["lib/*"],
+      "@/styles/*": ["styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
