--- a/package.json
+++ b/package.json
@@ -3,22 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "types:check": "tsc --skipLibCheck --noEmit",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "i18next": "^22.5.1",
+    "i18next-chained-backend": "^4.4.0",
+    "i18next-http-backend": "^2.2.1",
+    "i18next-localstorage-backend": "^4.1.1",
     "next": "13.4.5",
+    "next-i18next": "^13.3.0",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
