--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.5",
     "i18next": "^22.5.1",
     "i18next-chained-backend": "^4.4.0",
+    "i18next-fs-backend": "^2.1.5",
     "i18next-http-backend": "^2.2.1",
     "i18next-localstorage-backend": "^4.1.1",
     "next": "13.4.5",
