--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
@@ -23,6 +24,8 @@
     "i18next-fs-backend": "^2.1.5",
     "i18next-http-backend": "^2.2.1",
     "i18next-localstorage-backend": "^4.1.1",
+    "i18next-multiload-backend-adapter": "^2.2.2",
+    "lru-cache": "^10.0.0",
     "next": "13.4.5",
     "next-i18next": "^13.3.0",
     "next-redux-wrapper": "^8.1.0",
@@ -32,6 +35,7 @@
     "react-i18next": "^12.3.1",
     "redux": "^4.2.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   }
 }
